--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dev": "vite"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
